# physx.js

./: .gitignore  CMakeLists.txt  README.md  compile.sh  embind.cpp
bindings/: JSTriangleMeshDesc.hpp  MeshDesc.hpp  embind.cpp  mom.hpp
bindings/emscripten/: bind.h  wire.h
demo/: index.asm.htm  index.asm2.htm  index.htm  index2.htm
